Add background transitions

--- a/not_yet_index.html
+++ b/not_yet_index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <details name="nav">
+    <details name="nav" id="design">
       <summary>design</summary>
       <ul>
         <li>
@@ -22,7 +22,7 @@
         </li>
       </ul>
     </details>
-    <details name="nav">
+    <details name="nav" id="music">
       <summary>music</summary>
       <ul>
         <li>
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </details>
-    <details name="nav">
+    <details name="nav" id="art">
       <summary>art</summary>
       <ul>
         <li>
@@ -50,7 +50,7 @@
         </li>
       </ul>
     </details>
-    <details name="nav">
+    <details name="nav" id="about">
       <summary>about</summary>
       <ul>
         <li>
