Refactor styles, optimize transitions

--- a/not_yet_index.html
+++ b/not_yet_index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <main>
+  <nav>
     <details name="nav" id="design">
       <summary>design</summary>
       <ul>
@@ -67,8 +67,8 @@
         </li>
       </ul>
     </details>
-  </main>
-  <div id="scene">
+  </nav>
+  <div id="background-scene">
     <div id="k0v1">
       <div id="ascender" class="center">
         <div class="front"></div>
@@ -93,7 +93,6 @@
         <div class="side-01"></div>
         <div class="side-02"></div>
         <div class="side-03"></div>
-        <div class="side-04"></div>
       </div>
     </div>
   </div>
